# document-ai-agents

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.api  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  rag_platform.db  refund.txt
.github/workflows/: ci.yml
alembic/migrations/: env.py  script.py.mako
app/: main.py
app/admin/: __init__.py  dependencies.py  routes.py  schemas.py  service.py
app/agent/: memory.py  orchestrator.py
app/answers/: citations.py  generator.py  types.py
app/audit/: events.py
app/auth/: dependencies.py  security.py
app/billing/: plans.py  subscriptions.py  usage.py
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  INGESTION.md  PROJECT_MAP.md  project-management-map.html
evals/: run.py  schemas.py  scorers.py
infra/: ADMIN_CONSOLE.md  BACKUPS_AND_RETENTION.md  BILLING.md  COMPLIANCE.md  DEPLOYMENT.md
observability/: README.md
scripts/: check_all.ps1  create_admin_user.py  create_dev_workspace.py  generate_project_map.py  prod_smoke.ps1  smoke_api.ps1
tests/: conftest.py  helpers.py  test_admin_api.py  test_agent_orchestrator.py  test_agent_tools.py  test_answer_generator.py  test_auth_api.py  test_auth_security.py  test_billing_api.py  test_chat_sessions_api.py  test_chunker.py  test_citations.py  test_compare_tool.py  test_compliance_api.py  test_config.py  test_connectors_api.py  test_documents_api.py  test_embedder.py  test_evals.py  test_exports_api.py  test_extraction_exporters.py  test_extraction_runner.py  test_extraction_validators.py  test_health.py  test_indexer.py  test_ingestion_loader.py  test_job_state.py  test_media_transcription.py  test_media_worker.py  test_ocr_ingestion.py  test_ocr_worker.py  test_office_ingestion.py  test_permissions.py  test_plan_quota_enforcement.py  test_query_api.py  test_repo_ingestion.py  test_report_generator.py  test_reranker.py  test_retriever.py  test_reviews_api.py  (+9 more)
web/: Dockerfile
(+170 files in other folders)
