[project]
name = "rag-platform"
version = "0.1.0"
description = "Rag Platform backend baseline"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic-settings>=2.4.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.15.0",
    "psycopg[binary]>=3.2.0",
    "python-multipart>=0.0.9",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "python-pptx>=1.0.0",
    "pandas>=2.3.0",
    "openpyxl>=3.1.0",
    "pytesseract>=0.3.13",
    "Pillow>=12.0.0",
    "pymupdf>=1.26.0",
    "openai-whisper>=20240930",
    "bcrypt>=4.2.0",
    "PyJWT>=2.10.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.File",
    "fastapi.Form",
    "fastapi.Security"
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "alembic*", "scripts*"]

[project.scripts]
rag-evals = "evals.run:main"
